--- a/module-core/src/main/resources/application-local.yml
+++ b/module-core/src/main/resources/application-local.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: com.dev.config.MysqlCustomDialect
     hibernate:
       ddl-auto: update # or `none` # beta나 실제 서비스에선 none으로 둘 것
     properties:
