--- a/module-common/src/main/resources/application.yml
+++ b/module-common/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8100
+
+spring:
+  profiles:
+    group:
+      local: local
+      production: production
+  config:
+    import: application-core.yml
