--- a/module-authentication/build.gradle
+++ b/module-authentication/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // Mysql
     implementation 'mysql:mysql-connector-java:8.0.26'
